2005-01-09  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* libgimp/gimpgradientmenu.c: fixed out-of-bounds access in
	gradient selection widget. Presumably fixes bug #163427.

2005-01-09  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/widgets/gimpactionview.c (gimp_action_view_new): connect to
	"button_press_event" and start editing immidiately instead of
	waiting for a second click. Fixes bug #163385.

2005-01-09  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/widgets/gimpdialogfactory.c (gimp_dialog_factories_toggle):
	if called with (ensure_visibility == TRUE), raise the toolbox.
	Fixes bug #163381.

2005-01-08  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_button_press): fixed handling of clicks
	into a horizontally scrolled treeview.

	(gimp_container_tree_view_find_click_cell): really fix handling of
	RTL layouts (bug #162663).

2005-01-07  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_button_press): handle RTL layouts (fixes
	bug #162663).

2005-01-07  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch (fix by Shlomi Fish):

	* plug-ins/script-fu/scripts/frosty-logo.scm: made sure the shadow
	is given enough space and then truncated instead of translated to
	the center of the image, thus preventing the display of shadows
	with a completely horizontal or vertical edge (fixes bug #132145).

2005-01-07  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD branch:

	* app/actions/plug-in-commands.c (plug_in_run_cmd_callback):
	remember the last plug-in if it has at least 3 args, not 2.

2005-01-07  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/composite/gimp-composite-x86.h
	* app/composite/gimp-composite-sse.c: applied patch from Andreas
	Jochens that fixes the build on amd64 with gcc-4.0 (bug #163041).
