@@ -55,7 +55,8 @@ extern void gimp_composite_softlight_rgba8_rgba8_rgba8_mmx (GimpCompositeContext
 extern void gimp_composite_subtract_rgba8_rgba8_rgba8_mmx (GimpCompositeContext *ctx);
 extern void gimp_composite_swap_rgba8_rgba8_rgba8_mmx (GimpCompositeContext *ctx);
 extern void gimp_composite_valueonly_rgba8_rgba8_rgba8_mmx (GimpCompositeContext *ctx);
-
+#if 0
 extern void gimp_composite_addition_va8_va8_va8_mmx (GimpCompositeContext *ctx);
+#endif
 #endif /* COMPILE_IS_OKAY */
 #endif
